# o3d_pointnet2_semantic_v2

./: LICENSE  README.md  benchmark.py  interpolate.py  kitti_predict.py  model.py  predict.py  semantic.json  train.py
dataset/: remove_label0.py  semantic_dataset.py
dataset/no_label_0.1/: bildstein_station1_xyz_intensity_rgb.labels  bildstein_station3_xyz_intensity_rgb.labels  bildstein_station5_xyz_intensity_rgb.labels  domfountain_station1_xyz_intensity_rgb.labels  domfountain_station2_xyz_intensity_rgb.labels  domfountain_station3_xyz_intensity_rgb.labels  neugasse_station1_xyz_intensity_rgb.labels  sg27_station2_intensity_rgb.labels  sg27_station4_intensity_rgb.labels  sg27_station5_intensity_rgb.labels  sg27_station9_intensity_rgb.labels  sg28_station4_intensity_rgb.labels  untermaederbrunnen_station1_xyz_intensity_rgb.labels  untermaederbrunnen_station3_xyz_intensity_rgb.labels
log3_semantic/semantic/: best_model_epoch_000.ckpt.index  best_model_epoch_005.ckpt.index  best_model_epoch_010.ckpt.index  best_model_epoch_050.ckpt.index  checkpoint  log_train.txt  model.ckpt.index
log3_semantic/semantic/validation/: events.out.tfevents.1723741100.PC0142120
log_0.1/semantic/: best_model_epoch_000.ckpt.index  best_model_epoch_005.ckpt.index  best_model_epoch_025.ckpt.index  best_model_epoch_030.ckpt.index  best_model_epoch_040.ckpt.index  best_model_epoch_045.ckpt.index  best_model_epoch_070.ckpt.index  best_model_epoch_075.ckpt.index  best_model_epoch_080.ckpt.index  best_model_epoch_090.ckpt.index  checkpoint  log_train.txt  model.ckpt.index
log_0.1/semantic/train/: events.out.tfevents.1723917576.PC0142120  events.out.tfevents.1724084934.PC0142120  events.out.tfevents.1724097564.PC0142120  events.out.tfevents.1724116282.PC0142120  events.out.tfevents.1724116397.PC0142120
log_0.1/semantic/validation/: events.out.tfevents.1723917577.PC0142120  events.out.tfevents.1724084934.PC0142120  events.out.tfevents.1724097564.PC0142120  events.out.tfevents.1724116282.PC0142120  events.out.tfevents.1724116398.PC0142120
log_0.1_2/semantic/: best_model_epoch_035.ckpt.index  best_model_epoch_040.ckpt.index  best_model_epoch_045.ckpt.index  best_model_epoch_050.ckpt.index  checkpoint  model.ckpt.index
log_0.1_2/semantic/train/: events.out.tfevents.1724173798.PC0142120  events.out.tfevents.1724173964.PC0142120  (+4 more)
modified_files/: packages.yaml  pointnet_util.py  requirements.txt  tf_grouping.cpp  tf_util.py  venv_packages.txt
tf_ops/: CMakeLists.txt  readme.txt  test_interpolate.py  test_tf_ops.py  tf_grouping.py  tf_interpolate.cpp  tf_sampling.cpp
util/: alter_utils.py  pointnet_util.py  tf_util.py
(+11 files in other folders)
